# MusicScoringApparatus

./: MusicTrans  MusicTrans.pro  MusicTrans.pro.user.f265f70.4.8-pre1  READ.md  aarch64_cross_build.txt  gpio_input.cpp  gpio_input.h  gpio_output.cpp  gpio_output.h  initializer_pi.cpp  initializer_pi.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  meson.build  music.ui  sequencer.cpp  sequencer.h  writefile.cpp  writefile.h
Headers/: writefile.h
arch/pi4/: gpio.h
docs/: README.md  Setup.txt
include/: MainWindow.h  gpio_input.h  gpio_mapping.h  gpio_output.h  mainwindow.h  mythread.h  sequencer.h  writefile.h
src/: MainWindow.cpp  gpio_input.cpp  gpio_input.h  gpio_output.cpp  main.cpp  mainwindow.cpp  meson.build  mythread.cpp  sequencer.cpp  sequencer.h  writefile.cpp
ui/: mainwindow.ui
